--- a/public/taulell.html
+++ b/public/taulell.html
@@ -184,6 +184,21 @@
 
     <button id="endGameButton" class="menu-button" style="right: 70px;"><i class="bi bi-exclamation-circle-fill"></i></i></button>
 
+    <div class="side-areas">
+        <div class="side-rectangle">
+            <div class="white-square"></div>
+            <div class="white-square"></div>
+            <div class="white-square"></div>
+            <div class="white-square"></div>
+        </div>
+        <div class="side-rectangle">
+            <div class="white-square"></div>
+            <div class="white-square"></div>
+            <div class="white-square"></div>
+            <div class="white-square"></div>
+        </div>
+    </div>
+
     <script src="./js/taulell.js"></script>
 
 </body>
