--- a/public/taulell.html
+++ b/public/taulell.html
@@ -184,18 +184,18 @@
 
     <button id="endGameButton" class="menu-button" style="right: 70px;"><i class="bi bi-exclamation-circle-fill"></i></i></button>
 
-    <div class="side-areas">
-        <div class="side-rectangle">
-            <div class="white-square"></div>
-            <div class="white-square"></div>
-            <div class="white-square"></div>
-            <div class="white-square"></div>
+    <div class="equip-area">
+        <div class="area-rectangle">
+            <div class="jugador porter local" id="porterLocal"></div>
+            <div class="jugador defensa local" id="defensaLocal"></div>
+            <div class="jugador mig local" id="migLocal"></div>
+            <div class="jugador davanter local" id="davanterLocal"></div>
         </div>
-        <div class="side-rectangle">
-            <div class="white-square"></div>
-            <div class="white-square"></div>
-            <div class="white-square"></div>
-            <div class="white-square"></div>
+        <div class="area-rectangle">
+            <div class="jugador porter visitant" id="porterVisitant"></div>
+            <div class="jugador defensa visitant" id="defensaVisitant"></div>
+            <div class="jugador mig visitant" id="migVisitant"></div>
+            <div class="jugador davanter visitant" id="davanterVisitant"></div>
         </div>
     </div>
 
