--- a/public/taulell.html
+++ b/public/taulell.html
@@ -171,12 +171,12 @@
 
     <div class="players">
         <div class="player" id="player1">
-            <div class="player-zone">
-            </div>
+            <div class="player-zone"></div>
+            <p class="pressupost" id="pressupostJugador1">a</p> 
         </div>
         <div class="player" id="player2">
-            <div class="player-zone">
-            </div>
+            <div class="player-zone"></div>
+            <p class="pressupost" id="pressupostJugador2">a</p>
         </div>
     </div>  
     
