--- a/public/taulell.html
+++ b/public/taulell.html
@@ -170,13 +170,13 @@
     <p id="result"></p>
 
     <div class="players">
-        <div class="player" id="player1">
-            <div class="player-zone"></div>
-            <p class="pressupost" id="pressupostJugador1">a</p> 
+        <div class="jugador-container">
+            <div class="player" id="player1"></div>
+            <div class="pressupost" id="pressupostJugador1">Carregant...</div>
         </div>
-        <div class="player" id="player2">
-            <div class="player-zone"></div>
-            <p class="pressupost" id="pressupostJugador2">a</p>
+        <div class="jugador-container">
+            <div class="player" id="player2"></div>
+            <div class="pressupost" id="pressupostJugador2">Carregant...</div>
         </div>
     </div>  
     
